Responsividade: retirando bugs do overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,7 +48,7 @@ section{
     width: 90%;
     padding: 0 5%;
     margin-bottom: 100px;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 #inicial{
@@ -365,10 +365,11 @@ h3{
 
 @media (max-width: 480px) {
     body {
-    width: 100vw;
-    margin: 0; /* Remover margens padrão */
-    padding: 0; /* Remover preenchimentos padrão */
-    overflow-x: hidden; 
+        width: 100vw;
+        margin: 0; /* Remover margens padrão */
+        padding: 0; /* Remover preenchimentos padrão */
+        overflow-x: hidden; 
+        text-align: center;
     }
 
     header {
